# WebToMarkdown

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: default.yaml
src/: config_loader.py  web_to_markdown.py
src/crawler/: robots_parser.py  spider.py
src/parser/: content_extractor.py  html_to_md.py  resource_handler.py
src/utils/: file_io.py  logger.py
